--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.shawnlin:number-picker:2.4.6'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
